# portview

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/: CONTRIBUTING.md  portview-srs.md
docs/superpowers/plans/: 2026-04-09-enriched-port-display.md
docs/superpowers/specs/: 2026-04-11-update-command-design.md
hooks/: commit-msg  commit-msg.bat  pre-commit  pre-commit.bat  pre-push  pre-push.bat
scripts/: Test-CommitMessage.ps1  check-benchmark-budget.ps1  check-benchmark-budget.sh  check-platform-clippy.ps1  check-platform-clippy.sh  install-hooks.ps1  install-hooks.sh
src/: collector.rs  display.rs  docker.rs  filter.rs  framework.rs  lib.rs  main.rs  project.rs  types.rs  update.rs
src/collector/: dedup.rs  entry.rs  mod.rs  resolve.rs  tcp_state.rs  user.rs
src/display/: render.rs  table.rs  tips.rs
src/docker/: api.rs  http.rs  ipc.rs  mod.rs  podman.rs
src/kill/: mod.rs  platform.rs  report.rs  resolve.rs
