[package]
name = "portview"
version = "0.1.0"
edition = "2024"
authors = ["Ehsan Khan"]
description = "A cross-platform CLI tool that lists open network ports and their associated processes"
license = "MIT"
readme = "README.md"
keywords = ["port", "network", "socket", "process", "cli"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/ehsan18t/portview"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Binary-only crate: modules are pub solely for criterion benchmark access,
# not for use as a public library API. Public-API documentation lints are
# intentionally relaxed.
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "deny"
# Deny common footguns
let_underscore_drop = "deny"
non_ascii_idents = "deny"

[dependencies]
listeners = "0.5"
sysinfo = "0.38"
pico-args = "0.5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[build-dependencies]
winresource = "0.1"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# cargo-deb metadata for Debian/Ubuntu package generation.
[package.metadata.deb]
section = "utils"
priority = "optional"
assets = [
    ["target/release/portview", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/portview/", "644"],
    ["LICENSE", "usr/share/doc/portview/", "644"],
]
extended-description = """\
portview lists open network ports with their owning processes, project roots,
framework labels, and Docker container names. Designed for developers who need
instant visibility into what is listening on their machine."""

# cargo-generate-rpm metadata for Fedora/RHEL package generation.
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/portview", dest = "/usr/bin/portview", mode = "0755" },
    { source = "README.md", dest = "/usr/share/doc/portview/README.md", mode = "0644" },
    { source = "LICENSE", dest = "/usr/share/doc/portview/LICENSE", mode = "0644" },
]
